test/reject/16-malformed-generic.puml
@startuml

class Tomate {
    LA<A<A, A, A<A<A<A, A<A>, A>>>>, A<A, A<A<A, A, A>, A, A>> uff
}

@enduml